--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
   "manifest_version": 3,
   "name": "Anna's Fast Slow Downloader",
-  "version": "1.1",
+  "version": "1.0",
   "description": "Automatiza el proceso de descarga en Anna's Archive",
   "permissions": ["storage", "activeTab", "scripting"],
   "action": {},
   "background": {
     "service_worker": "background.js"
+  },
+  "icons": {
+    "128": "icon.png"
   },
   "content_scripts": [
     {
